--- a/rapidminer/Project/Data/Kaggle-Data.properties
+++ b/rapidminer/Project/Data/Kaggle-Data.properties
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-<comment>Properties of repository entry bank-loan-status-good-bad</comment>
+<comment>Properties of repository entry Kaggle-Data</comment>
 <entry key="owner">Jorge</entry>
-<entry key="ioobject-class">com.rapidminer.example.set.SimpleExampleSet</entry>
 </properties>
